--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,79 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Roboto";
+  color: white;
+  text-shadow:0.5px 0.5px black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: rgb(32, 32, 32);
+}
+
+.navbar h1 {
+  font-size: 75px;
+  padding-left: 50px;
+  color: rgb(245, 222, 17);
+} 
+
+.navbar a {
+  font-size: 25px;
+  margin-right: 5px;
+  margin-left: 5px;
+  padding: 15px;
+  text-decoration: none;
+  border: 1px dashed white;
+  border-radius: 10px;
+}
+
+.navbar a:hover {
+  border-radius: 10px;
+  background-color:rgb(156, 13, 161);
+  text-shadow:0.5px 0.5px black;
+}
+
+.content {
+  display: flex;
+  padding-left: 70px;
+  padding-top: 70px;
+  font-size: 25px;
+  background-color: rgb(24, 24, 24) ;
+  height: 100vh;
+}
+
+.blog-preview {
+  display: flex;  
+  flex-direction: column;
+  width: 800px;
+  padding: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 10px;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 10px;
+}
+
+.blog-preview h2 {
+  padding-bottom: 5px;
+  text-decoration: underline;
+}
+
+.blog-preview:hover{
+  box-shadow: inset 0 0 1em white, 0 0 1em black;
+  border-radius: 10px;
+}
+
+.blog-list h1 {
+  font-size: 50px;
+  margin-bottom: 10px;
+  padding-left: 5px;
+}
+
+.alert {
+  font-size: 50px;
 }
