--- a/src/index.css
+++ b/src/index.css
@@ -4,22 +4,28 @@
   font-family: "Roboto";
   color: white;
   text-shadow:0.5px 0.5px black;
+  background-color: rgb(32, 32, 32);
 }
 
 .navbar {
   padding: 20px;
   display: flex;
   align-items: center;
-  flex-direction: row;
+  max-width: 1000px;
+  margin: 0 auto;
   justify-content: space-between;
-  background-color: rgb(32, 32, 32);
+  border-bottom: 1px solid white;
 }
 
 .navbar h1 {
   font-size: 75px;
-  padding-left: 50px;
   color: rgb(245, 222, 17);
 } 
+
+.navbar .links {
+  margin-left: auto;
+  background-color: rgb(32, 32, 32);
+}
 
 .navbar a {
   font-size: 25px;
@@ -38,21 +44,18 @@
 }
 
 .content {
-  display: flex;
-  padding-left: 70px;
-  padding-top: 70px;
+  max-width: 1000px;
+  margin: 40px auto;
+  padding: 20px;
   font-size: 25px;
-  background-color: rgb(24, 24, 24) ;
+  background-color: rgb(32, 32, 32);
   height: 100vh;
 }
 
 .blog-preview {
-  display: flex;  
-  flex-direction: column;
-  width: 800px;
+  width: 1000px;
   padding: 20px;
-  padding-bottom: 20px;
-  margin-bottom: 10px;
+  margin-top: 20px;
   border-style: solid;
   border-width: 1px;
   border-radius: 10px;
@@ -60,11 +63,14 @@
 
 .blog-preview h2 {
   padding-bottom: 5px;
-  text-decoration: underline;
+}
+
+.blog-preview a {
+  text-decoration: none;
 }
 
 .blog-preview:hover{
-  box-shadow: inset 0 0 1em white, 0 0 1em black;
+  box-shadow: 2px 2px 5px rgb(255, 255, 255);
   border-radius: 10px;
 }
 
@@ -76,4 +82,14 @@
 
 .alert {
   font-size: 50px;
+}
+
+.blog-details div {
+  margin: 20px 0;
+  text-align:justify;
+}
+
+.blog-details h2 {
+  font-size: 50px;
+  margin-bottom: 20px;
 }
